scripts/nullaway/wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8.txt
../wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allconverters/record/RequestConv.java:15: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.request = request;
                     ^
    (see http://t.uber.com/nullaway )
../wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allconverters/record/IpConv.java:12: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.ip = ip;
                ^
    (see http://t.uber.com/nullaway )
../wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allconverters/record/StatusConv.java:12: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.status = status;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allconverters/record/DateConv.java:13: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.date = date;
                  ^
    (see http://t.uber.com/nullaway )
../wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allconverters/record/SizeConv.java:12: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.size = size;
                  ^
    (see http://t.uber.com/nullaway )
../wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allconverters/record/request/PathConv.java:12: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.path = path;
                  ^
    (see http://t.uber.com/nullaway )
../wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allconverters/record/request/ExtensionConv.java:12: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.extension = extension;
                       ^
    (see http://t.uber.com/nullaway )
../wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allconverters/record/request/ProtocolConv.java:12: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.protocol = protocol;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allconverters/record/request/MethodConv.java:12: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.method = method;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allconverters/record/request/UrlConv.java:12: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.url = url;
                 ^
    (see http://t.uber.com/nullaway )
../wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allanalytics/Analyti.java:23: error: [NullAway] dereferenced expression record.getStatus() is @Nullable
            String status = record.getStatus().getStatus();
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allanalytics/Analyti.java:39: error: [NullAway] dereferenced expression record.getRequest().getUrl().getExtension() is @Nullable
            String extension = record.getRequest().getUrl().getExtension().getExtension();
                                                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allanalytics/Analyti.java:39: error: [NullAway] dereferenced expression record.getRequest().getUrl() is @Nullable
            String extension = record.getRequest().getUrl().getExtension().getExtension();
                                                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allanalytics/Analyti.java:39: error: [NullAway] dereferenced expression record.getRequest() is @Nullable
            String extension = record.getRequest().getUrl().getExtension().getExtension();
                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allanalytics/Analyti.java:66: error: [NullAway] dereferenced expression record.getTime().getDate() is @Nullable
            Integer hour = record.getTime().getDate().get(Calendar.HOUR_OF_DAY);
                                                     ^
    (see http://t.uber.com/nullaway )
../wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allanalytics/Analyti.java:66: error: [NullAway] dereferenced expression record.getTime() is @Nullable
            Integer hour = record.getTime().getDate().get(Calendar.HOUR_OF_DAY);
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allanalytics/Analyti.java:81: error: [NullAway] dereferenced expression record.getTime().getDate() is @Nullable
            Integer hour = record.getTime().getDate().get(Calendar.HOUR_OF_DAY);
                                                     ^
    (see http://t.uber.com/nullaway )
../wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allanalytics/Analyti.java:81: error: [NullAway] dereferenced expression record.getTime() is @Nullable
            Integer hour = record.getTime().getDate().get(Calendar.HOUR_OF_DAY);
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allparsers/LogPars.java:17: error: [NullAway] dereferenced expression logStr is @Nullable
        String[] recordStr2 = logStr.split(System.getProperty("line.separator"));
                                    ^
    (see http://t.uber.com/nullaway )
19 errors
